syntax="proto3";

package auth;

service AuthService {
    rpc IsTokenValid (TokenRequest) returns (ResponseDto) {}
    rpc GenerateToken (Payload) returns (Token) {}
    rpc Login(LoginRequest) returns (Token) {}
    rpc Register(RegisterRequest) returns (Token) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message ResponseDto {
    bool success = 1;
}

message Payload {
    string userId = 1;
    string username = 2;
}
    
message Token {
    string accessToken = 1;
    string refreshToken = 2;
}

message TokenRequest {
    string token = 1;
}

